--- a/css/style.css
+++ b/css/style.css
@@ -11,13 +11,13 @@
   justify-content:center;
 }
 h1{
-  mix-blend-mode:difference;
+  mix-blend-mode:overlay;
 }
 body{
   color:white;
   height:100vh;
   flex-direction:column;
-  background:linear-gradient(45deg,purple,skyblue,white);
+  background:linear-gradient(45deg,black,purple,white);
 }
 .input{
   padding:2vw;
@@ -31,10 +31,11 @@ input{
 .btn{
   color:white;
   padding:1vw;
-  border-radius:3px;
+  border-radius:5px;
   font-weight:bold;
   border:1px outset gray;
-  background-color:crimson;
+  background-color:purple;
+  
 }
 .output{
   width:80vw;
@@ -53,11 +54,6 @@ input{
   height:60%;
   font-size:8vw;
   font-weight:bold;
-}
-.temp i{
-  display:flex;
-  font-size:4vw;
-  align-self:flex-start;
 }
 .aside{
   width:45%;
