--- a/css/style.css
+++ b/css/style.css
@@ -61,3 +61,9 @@ input{
   flex-direction:column;
   align-items:flex-start;
 }
+
+@media (orientation:landscape){
+ .input{
+    padding: 1vw;
+  }
+}
